fix slideshow jumping

--- a/public/css/styles.less
+++ b/public/css/styles.less
@@ -392,11 +392,16 @@ a:hover {
             border: 1px solid rgb(204, 204, 204);
             margin: 15px 0px 0px 0px;
              width: @defaultWidth;
-  
-  .hero-img {
+  .hero-img-wrapper {
     margin: 10px;
-    border: 1px solid @lightGrey;
+    height: 350px;
+     width: 650px;
+     
+     .hero-img {
+       border: 1px solid @lightGrey;
+     }
   }
+  
 }
 
 .project-thumbnail-list {
